kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot
  labels:
    app: discord-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      name: discord-bot
      labels:
        app: discord-bot
    spec:
      containers:
        - name: discord-bot
          image: ghcr.io/zgamelogic/discord-bot:master
          imagePullPolicy: Always
          volumeMounts:
            - name: keystore-volume
              mountPath: "/etc/keystore"
              readOnly: true
            - name: apns
              mountPath: "/apns"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: keystore-volume
          secret:
            secretName: ssl-keystore-secret
        - name: apns
          hostPath:
            path: /home/Ben/front-end/apns
            type: Directory
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
