kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-bot
spec:
  selector:
    app: discord-bot
  ports:
    - protocol: TCP
      port: 2000
      targetPort: 2000
  type: ClusterIP
