kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-ingress
spec:
  rules:
    - host: "discord.zgamelogic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discord-bot
                port:
                  number: 2000
  tls:
    - hosts:
        - "discord.zgamelogic.com"
      secretName: ingress-tls
